rml/rml2html/parsing/parser.output
   0  $accept : %entry% $end

   1  implementation : structure EOF

   2  interface : signature EOF

   3  structure : structure_tail
   4            | seq_expr structure_tail

   5  structure_tail :
   6                 | SEMISEMI
   7                 | SEMISEMI seq_expr structure_tail
   8                 | SEMISEMI structure_item structure_tail
   9                 | structure_item structure_tail

  10  structure_item : LET rec_flag let_bindings
  11                 | SIGNAL signal_comma_list
  12                 | SIGNAL signal_comma_list DEFAULT par_expr GATHER par_expr
  13                 | TYPE type_declarations
  14                 | EXCEPTION UIDENT constructor_arguments
  15                 | EXCEPTION UIDENT EQUAL constr_longident
  16                 | OPEN UIDENT

  17  signature :
  18            | signature signature_item
  19            | signature signature_item SEMISEMI

  20  signature_item : VAL val_ident_colon core_type
  21                 | TYPE type_declarations
  22                 | EXCEPTION UIDENT constructor_arguments
  23                 | OPEN UIDENT

  24  par_expr : seq_expr
  25           | seq_expr BARBAR par_expr
  26           | seq_expr BARGRATER par_expr

  27  seq_expr : expr
  28           | expr SEMI
  29           | expr SEMI seq_expr

  30  expr : simple_expr
  31       | simple_expr simple_expr_list
  32       | LET rec_flag let_bindings IN par_expr
  33       | FUNCTION opt_bar match_cases
  34       | FUN simple_pattern fun_def
  35       | MATCH par_expr WITH opt_bar match_cases
  36       | TRY par_expr WITH opt_bar match_cases
  37       | TRY par_expr WITH error
  38       | expr_comma_list
  39       | constr_longident simple_expr
  40       | IF par_expr THEN expr ELSE expr
  41       | IF par_expr THEN expr
  42       | WHILE par_expr DO par_expr DONE
  43       | FOR val_ident EQUAL par_expr direction_flag par_expr DO par_expr DONE
  44       | expr COLONCOLON expr
  45       | expr INFIXOP0 expr
  46       | expr INFIXOP1 expr
  47       | expr INFIXOP2 expr
  48       | expr INFIXOP3 expr
  49       | expr INFIXOP4 expr
  50       | expr PLUS expr
  51       | expr MINUS expr
  52       | expr MINUSDOT expr
  53       | expr STAR expr
  54       | expr EQUAL expr
  55       | expr LESS expr
  56       | expr GREATER expr
  57       | expr OR expr
  58       | expr AMPERSAND expr
  59       | expr AMPERAMPER expr
  60       | expr COLONEQUAL expr
  61       | subtractive expr
  62       | simple_expr DOT label_longident LESSMINUS expr
  63       | simple_expr DOT LPAREN par_expr RPAREN LESSMINUS expr
  64       | simple_expr DOT LBRACKET par_expr RBRACKET LESSMINUS expr
  65       | ASSERT simple_expr
  66       | PRE pre_expr
  67       | EMIT simple_expr
  68       | EMIT simple_expr simple_expr
  69       | SIGNAL signal_comma_list IN par_expr
  70       | SIGNAL signal_comma_list DEFAULT par_expr GATHER par_expr IN par_expr
  71       | DO par_expr UNTIL opt_bar until_cases DONE
  72       | DO par_expr WHEN simple_expr
  73       | CONTROL par_expr WITH simple_expr
  74       | PRESENT par_expr THEN expr ELSE expr
  75       | PRESENT par_expr THEN expr
  76       | PRESENT par_expr ELSE expr
  77       | AWAIT await_flag simple_expr
  78       | AWAIT await_flag simple_expr LPAREN pattern RPAREN IN par_expr
  79       | PROCESS proc_def
  80       | RUN simple_expr

  81  simple_expr : val_longident
  82              | constant
  83              | constr_longident
  84              | LPAREN par_expr RPAREN
  85              | LPAREN par_expr error
  86              | BEGIN par_expr END
  87              | BEGIN END
  88              | BEGIN par_expr error
  89              | LPAREN par_expr type_constraint RPAREN
  90              | simple_expr DOT label_longident
  91              | simple_expr DOT LPAREN par_expr RPAREN
  92              | simple_expr DOT LPAREN par_expr error
  93              | simple_expr DOT LBRACKET par_expr RBRACKET
  94              | simple_expr DOT LBRACKET par_expr error
  95              | LBRACE record_expr RBRACE
  96              | LBRACE record_expr error
  97              | LBRACKETBAR expr_semi_list opt_semi BARRBRACKET
  98              | LBRACKETBAR expr_semi_list opt_semi error
  99              | LBRACKETBAR BARRBRACKET
 100              | LBRACKET expr_semi_list opt_semi RBRACKET
 101              | LBRACKET expr_semi_list opt_semi error
 102              | PREFIXOP simple_expr
 103              | NOTHING
 104              | PAUSE
 105              | LOOP par_expr END

 106  pre_expr : simple_expr
 107           | QUESTION simple_expr

 108  simple_expr_list : simple_expr
 109                   | simple_expr_list simple_expr

 110  let_bindings : let_binding
 111               | let_bindings AND let_binding
 112               | val_longident LESS pattern GREATER

 113  let_binding : val_ident fun_binding
 114              | pattern EQUAL par_expr
 115              | PROCESS val_ident proc_binding

 116  fun_binding : strict_binding
 117              | type_constraint EQUAL par_expr

 118  strict_binding : EQUAL par_expr
 119                 | simple_pattern fun_binding

 120  proc_binding : EQUAL par_expr
 121               | simple_pattern proc_binding

 122  match_cases : pattern match_action
 123              | match_cases BAR pattern match_action

 124  fun_def : match_action
 125          | simple_pattern fun_def

 126  proc_def : simple_expr

 127  match_action : MINUSGREATER par_expr
 128               | WHEN par_expr MINUSGREATER par_expr

 129  expr_comma_list : expr_comma_list COMMA expr
 130                  | expr COMMA expr

 131  record_expr : lbl_expr_list opt_semi

 132  lbl_expr_list : label_longident EQUAL expr
 133                | lbl_expr_list SEMI label_longident EQUAL expr

 134  expr_semi_list : expr
 135                 | expr_semi_list SEMI expr

 136  type_constraint : COLON core_type
 137                  | COLON error

 138  until_cases : simple_expr
 139              | until_handlers

 140  until_handlers : simple_expr LPAREN pattern RPAREN MINUSGREATER par_expr
 141                 | simple_expr MINUSGREATER par_expr
 142                 | until_handlers BAR simple_expr LPAREN pattern RPAREN MINUSGREATER par_expr

 143  pattern : simple_pattern
 144          | pattern AS val_ident
 145          | pattern_comma_list
 146          | constr_longident pattern
 147          | pattern COLONCOLON pattern
 148          | pattern BAR pattern

 149  simple_pattern : val_ident
 150                 | UNDERSCORE
 151                 | signed_constant
 152                 | CHAR DOTDOT CHAR
 153                 | constr_longident
 154                 | LBRACE lbl_pattern_list opt_semi RBRACE
 155                 | LBRACE lbl_pattern_list opt_semi error
 156                 | LBRACKET pattern_semi_list opt_semi RBRACKET
 157                 | LBRACKET pattern_semi_list opt_semi error
 158                 | LBRACKETBAR pattern_semi_list opt_semi BARRBRACKET
 159                 | LBRACKETBAR BARRBRACKET
 160                 | LBRACKETBAR pattern_semi_list opt_semi error
 161                 | LPAREN pattern RPAREN
 162                 | LPAREN pattern error
 163                 | LPAREN pattern COLON core_type RPAREN
 164                 | LPAREN pattern COLON core_type error

 165  pattern_comma_list : pattern_comma_list COMMA pattern
 166                     | pattern COMMA pattern

 167  pattern_semi_list : pattern
 168                    | pattern_semi_list SEMI pattern

 169  lbl_pattern_list : label_longident EQUAL pattern
 170                   | lbl_pattern_list SEMI label_longident EQUAL pattern

 171  type_declarations : type_declaration
 172                    | type_declarations AND type_declaration

 173  type_declaration : type_parameters LIDENT type_kind

 174  type_kind :
 175            | EQUAL core_type
 176            | EQUAL constructor_declarations
 177            | EQUAL BAR constructor_declarations
 178            | EQUAL LBRACE label_declarations opt_semi RBRACE

 179  type_parameters :
 180                  | type_parameter
 181                  | LPAREN type_parameter_list RPAREN

 182  type_parameter : QUOTE ident

 183  type_parameter_list : type_parameter
 184                      | type_parameter_list COMMA type_parameter

 185  constructor_declarations : constructor_declaration
 186                           | constructor_declarations BAR constructor_declaration

 187  constructor_declaration : constr_ident constructor_arguments

 188  constructor_arguments :
 189                        | OF core_type

 190  label_declarations : label_declaration
 191                     | label_declarations SEMI label_declaration

 192  label_declaration : mutable_flag label COLON core_type

 193  core_type : simple_core_type_or_tuple
 194            | core_type MINUSGREATER core_type

 195  simple_core_type : simple_core_type2
 196                   | LPAREN core_type_comma_list RPAREN

 197  simple_core_type2 : QUOTE ident
 198                    | type_longident
 199                    | simple_core_type2 type_longident
 200                    | LPAREN core_type_comma_list RPAREN type_longident
 201                    | PROCESS

 202  simple_core_type_or_tuple : simple_core_type
 203                            | simple_core_type STAR core_type_list

 204  core_type_comma_list : core_type
 205                       | core_type_comma_list COMMA core_type

 206  core_type_list : simple_core_type
 207                 | core_type_list STAR simple_core_type

 208  label : LIDENT

 209  constant : INT
 210           | CHAR
 211           | STRING
 212           | FLOAT
 213           | LPAREN RPAREN
 214           | FALSE
 215           | TRUE

 216  signed_constant : constant
 217                  | MINUS INT
 218                  | MINUS FLOAT

 219  ident : UIDENT
 220        | LIDENT

 221  val_ident : LIDENT
 222            | LPAREN operator RPAREN

 223  val_ident_colon : LIDENT COLON
 224                  | LPAREN operator RPAREN COLON
 225                  | LABEL

 226  operator : PREFIXOP
 227           | INFIXOP0
 228           | INFIXOP1
 229           | INFIXOP2
 230           | INFIXOP3
 231           | INFIXOP4
 232           | PLUS
 233           | MINUS
 234           | MINUSDOT
 235           | STAR
 236           | EQUAL
 237           | LESS
 238           | GREATER
 239           | OR
 240           | AMPERSAND
 241           | AMPERAMPER
 242           | COLONEQUAL

 243  constr_ident : UIDENT
 244               | COLONCOLON

 245  val_longident : val_ident
 246                | UIDENT DOT val_ident

 247  constr_longident : UIDENT
 248                   | UIDENT DOT UIDENT
 249                   | LBRACKET RBRACKET

 250  label_longident : LIDENT
 251                  | UIDENT DOT LIDENT

 252  type_longident : LIDENT
 253                 | UIDENT DOT LIDENT

 254  signal_decl : LIDENT
 255              | LIDENT COLON core_type

 256  signal_comma_list : signal_decl
 257                    | signal_comma_list COMMA signal_decl

 258  rec_flag :
 259           | REC

 260  direction_flag : TO
 261                 | DOWNTO

 262  mutable_flag :
 263               | MUTABLE

 264  await_flag :
 265             | IMMEDIATE
 266             | ONE
 267             | IMMEDIATE ONE

 268  opt_bar :
 269          | BAR

 270  opt_semi :
 271           | SEMI

 272  subtractive : MINUS
 273              | MINUSDOT

 274  %entry% : '\001' implementation
 275          | '\002' interface

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . implementation  (274)
	structure_tail : .  (5)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	EXCEPTION  shift 11
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 22
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	OPEN  shift 30
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SEMISEMI  shift 37
	SIGNAL  shift 38
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	TYPE  shift 42
	UIDENT  shift 43
	WHILE  shift 44
	EOF  reduce 5

	implementation  goto 45
	structure  goto 46
	structure_tail  goto 47
	seq_expr  goto 48
	structure_item  goto 49
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 2
	%entry% : '\002' . interface  (275)
	signature : .  (17)

	.  reduce 17

	interface  goto 58
	signature  goto 59


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	expr : ASSERT . simple_expr  (65)

	BEGIN  shift 6
	CHAR  shift 7
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	NOTHING  shift 29
	PAUSE  shift 31
	PREFIXOP  shift 33
	STRING  shift 39
	TRUE  shift 40
	UIDENT  shift 43
	.  error

	constr_longident  goto 60
	simple_expr  goto 61
	val_ident  goto 54
	val_longident  goto 56
	constant  goto 57


state 5
	expr : AWAIT . await_flag simple_expr  (77)
	expr : AWAIT . await_flag simple_expr LPAREN pattern RPAREN IN par_expr  (78)
	await_flag : .  (264)

	IMMEDIATE  shift 62
	ONE  shift 63
	BEGIN  reduce 264
	CHAR  reduce 264
	FALSE  reduce 264
	FLOAT  reduce 264
	INT  reduce 264
	LBRACE  reduce 264
	LBRACKET  reduce 264
	LBRACKETBAR  reduce 264
	LIDENT  reduce 264
	LOOP  reduce 264
	LPAREN  reduce 264
	NOTHING  reduce 264
	PAUSE  reduce 264
	PREFIXOP  reduce 264
	STRING  reduce 264
	TRUE  reduce 264
	UIDENT  reduce 264

	await_flag  goto 64


state 6
	simple_expr : BEGIN . par_expr END  (86)
	simple_expr : BEGIN . END  (87)
	simple_expr : BEGIN . par_expr error  (88)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	END  shift 65
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 69
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 7
	constant : CHAR .  (210)

	.  reduce 210


state 8
	expr : CONTROL . par_expr WITH simple_expr  (73)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 70
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 9
	expr : DO . par_expr UNTIL opt_bar until_cases DONE  (71)
	expr : DO . par_expr WHEN simple_expr  (72)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 71
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 10
	expr : EMIT . simple_expr  (67)
	expr : EMIT . simple_expr simple_expr  (68)

	BEGIN  shift 6
	CHAR  shift 7
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	NOTHING  shift 29
	PAUSE  shift 31
	PREFIXOP  shift 33
	STRING  shift 39
	TRUE  shift 40
	UIDENT  shift 43
	.  error

	constr_longident  goto 60
	simple_expr  goto 72
	val_ident  goto 54
	val_longident  goto 56
	constant  goto 57


state 11
	structure_item : EXCEPTION . UIDENT constructor_arguments  (14)
	structure_item : EXCEPTION . UIDENT EQUAL constr_longident  (15)

	UIDENT  shift 73
	.  error


state 12
	constant : FALSE .  (214)

	.  reduce 214


state 13
	constant : FLOAT .  (212)

	.  reduce 212


state 14
	expr : FOR . val_ident EQUAL par_expr direction_flag par_expr DO par_expr DONE  (43)

	LIDENT  shift 23
	LPAREN  shift 74
	.  error

	val_ident  goto 75


state 15
	expr : FUN . simple_pattern fun_def  (34)

	CHAR  shift 76
	FALSE  shift 12
	FLOAT  shift 13
	INT  shift 18
	LBRACE  shift 77
	LBRACKET  shift 78
	LBRACKETBAR  shift 79
	LIDENT  shift 23
	LPAREN  shift 80
	MINUS  shift 81
	STRING  shift 39
	TRUE  shift 40
	UIDENT  shift 82
	UNDERSCORE  shift 83
	.  error

	constr_longident  goto 84
	simple_pattern  goto 85
	val_ident  goto 86
	constant  goto 87
	signed_constant  goto 88


state 16
	expr : FUNCTION . opt_bar match_cases  (33)
	opt_bar : .  (268)

	BAR  shift 89
	CHAR  reduce 268
	FALSE  reduce 268
	FLOAT  reduce 268
	INT  reduce 268
	LBRACE  reduce 268
	LBRACKET  reduce 268
	LBRACKETBAR  reduce 268
	LIDENT  reduce 268
	LPAREN  reduce 268
	MINUS  reduce 268
	STRING  reduce 268
	TRUE  reduce 268
	UIDENT  reduce 268
	UNDERSCORE  reduce 268

	opt_bar  goto 90


state 17
	expr : IF . par_expr THEN expr ELSE expr  (40)
	expr : IF . par_expr THEN expr  (41)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 91
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 18
	constant : INT .  (209)

	.  reduce 209


state 19
	simple_expr : LBRACE . record_expr RBRACE  (95)
	simple_expr : LBRACE . record_expr error  (96)

	LIDENT  shift 92
	UIDENT  shift 93
	.  error

	label_longident  goto 94
	record_expr  goto 95
	lbl_expr_list  goto 96


state 20
	simple_expr : LBRACKET . expr_semi_list opt_semi RBRACKET  (100)
	simple_expr : LBRACKET . expr_semi_list opt_semi error  (101)
	constr_longident : LBRACKET . RBRACKET  (249)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RBRACKET  shift 97
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	constr_longident  goto 50
	expr  goto 98
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57
	expr_semi_list  goto 99


state 21
	simple_expr : LBRACKETBAR . expr_semi_list opt_semi BARRBRACKET  (97)
	simple_expr : LBRACKETBAR . expr_semi_list opt_semi error  (98)
	simple_expr : LBRACKETBAR . BARRBRACKET  (99)

	ASSERT  shift 4
	AWAIT  shift 5
	BARRBRACKET  shift 100
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	constr_longident  goto 50
	expr  goto 98
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57
	expr_semi_list  goto 101


state 22
	structure_item : LET . rec_flag let_bindings  (10)
	expr : LET . rec_flag let_bindings IN par_expr  (32)
	rec_flag : .  (258)

	REC  shift 102
	CHAR  reduce 258
	FALSE  reduce 258
	FLOAT  reduce 258
	INT  reduce 258
	LBRACE  reduce 258
	LBRACKET  reduce 258
	LBRACKETBAR  reduce 258
	LIDENT  reduce 258
	LPAREN  reduce 258
	MINUS  reduce 258
	PROCESS  reduce 258
	STRING  reduce 258
	TRUE  reduce 258
	UIDENT  reduce 258
	UNDERSCORE  reduce 258

	rec_flag  goto 103


state 23
	val_ident : LIDENT .  (221)

	.  reduce 221


state 24
	simple_expr : LOOP . par_expr END  (105)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 104
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 25
	simple_expr : LPAREN . par_expr RPAREN  (84)
	simple_expr : LPAREN . par_expr error  (85)
	simple_expr : LPAREN . par_expr type_constraint RPAREN  (89)
	constant : LPAREN . RPAREN  (213)
	val_ident : LPAREN . operator RPAREN  (222)

	AMPERAMPER  shift 105
	AMPERSAND  shift 106
	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	COLONEQUAL  shift 107
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	EQUAL  shift 108
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	GREATER  shift 109
	IF  shift 17
	INFIXOP0  shift 110
	INFIXOP1  shift 111
	INFIXOP2  shift 112
	INFIXOP3  shift 113
	INFIXOP4  shift 114
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LESS  shift 115
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 116
	MINUSDOT  shift 117
	NOTHING  shift 29
	OR  shift 118
	PAUSE  shift 31
	PLUS  shift 119
	PRE  shift 32
	PREFIXOP  shift 120
	PRESENT  shift 34
	PROCESS  shift 35
	RPAREN  shift 121
	RUN  shift 36
	SIGNAL  shift 67
	STAR  shift 122
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 123
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57
	operator  goto 124


state 26
	expr : MATCH . par_expr WITH opt_bar match_cases  (35)

	ASSERT  shift 4
	AWAIT  shift 5
	BEGIN  shift 6
	CHAR  shift 7
	CONTROL  shift 8
	DO  shift 9
	EMIT  shift 10
	FALSE  shift 12
	FLOAT  shift 13
	FOR  shift 14
	FUN  shift 15
	FUNCTION  shift 16
	IF  shift 17
	INT  shift 18
	LBRACE  shift 19
	LBRACKET  shift 20
	LBRACKETBAR  shift 21
	LET  shift 66
	LIDENT  shift 23
	LOOP  shift 24
	LPAREN  shift 25
	MATCH  shift 26
	MINUS  shift 27
	MINUSDOT  shift 28
	NOTHING  shift 29
	PAUSE  shift 31
	PRE  shift 32
	PREFIXOP  shift 33
	PRESENT  shift 34
	PROCESS  shift 35
	RUN  shift 36
	SIGNAL  shift 67
	STRING  shift 39
	TRUE  shift 40
	TRY  shift 41
	UIDENT  shift 43
	WHILE  shift 44
	.  error

	seq_expr  goto 68
	par_expr  goto 125
	constr_longident  goto 50
	expr  goto 51
	simple_expr  goto 52
	expr_comma_list  goto 53
	val_ident  goto 54
	subtractive  goto 55
	val_longident  goto 56
	constant  goto 57


state 27
	subtractive : MINUS .  (272)

	.  reduce 272


state 28
	subtractive : MINUSDOT .  (273)

	.  reduce 273


state 29
	simple_expr : NOTHING .  (103)

	.  reduce 103


state 30
	structure_item : OPEN . UIDENT  (16)

	UIDENT  shift 126
	.  error


state 31
	simple_expr : PAUSE .  (104)

	.  reduce 104


state 32
	expr : PRE . pre_expr  (66)
